WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
202322
[iOS] Vimeo fails to AirPlay in desktop mode
https://bugs.webkit.org/show_bug.cgi?id=202322
Summary
[iOS] Vimeo fails to AirPlay in desktop mode
Jer Noble
Reported
2019-09-27 10:31:28 PDT
[iOS] Vimeo fails to AirPlay in desktop mode
Attachments
Patch
(3.30 KB, patch)
2019-09-27 10:33 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2019-09-27 10:33:13 PDT
<
rdar://problem/55759025
>
Jer Noble
Comment 2
2019-09-27 10:33:59 PDT
Created
attachment 379738
[details]
Patch
WebKit Commit Bot
Comment 3
2019-09-27 12:48:12 PDT
Comment on
attachment 379738
[details]
Patch Clearing flags on attachment: 379738 Committed
r250441
: <
https://trac.webkit.org/changeset/250441
>
WebKit Commit Bot
Comment 4
2019-09-27 12:48:14 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug