[iOS] Vimeo fails to AirPlay in desktop mode https://bugs.webkit.org/show_bug.cgi?id=202322

Reviewed by Eric Carlson.

Add a Quirk which opts Vimeo out of the preload=auto restriction, and allows their
second video element containing a HLS stream to correctly start AirPlaying when the
system route changes.

* html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::finishInitialization):
* page/Quirks.cpp:
(WebCore::Quirks::needsPreloadAutoQuirk const):
* page/Quirks.h:


Canonical link: https://commits.webkit.org/215869@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@250441 268f45cc-cd09-0410-ab3c-d52691b4dbfc